<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contributor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_pisa"
    tools:context=".ContributorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="275dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#4CAF50"
                android:padding="10dp"
                android:text="@string/contributor_advices"
                android:textAlignment="center"
                android:textColor="#000000"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/phone_in_pocket"
                app:layout_constraintBottom_toTopOf="@+id/startButton"
                app:srcCompat="@drawable/pocket"
                tools:ignore="ImageContrastCheck" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#47BA5F"
                android:insetTop="20dp"
                android:insetBottom="20dp"
                android:text="@string/start"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#47BA5F"
                android:insetTop="20dp"
                android:insetBottom="20dp"
                android:text="@string/stop"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>